--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Welcome to Songlin Zheng's homepage!
+description: Feel free to subscribe to this channel to kill some time.
